package org.example;

public class ExecutionCommand implements Command {
	@Override
	public void execute(String[] args) {
		throw new RuntimeException("Not implemented");
	}
}
