package org.example;

public class FormattingCommand implements Command {
	@Override
	public void execute(String[] args) {
		throw new RuntimeException("Not implemented");
	}
}
