package org.example;

public class HelpCommand implements Command {
	@Override
	public void execute(String[] args) {
		throw new RuntimeException("Not implemented");
	}
}
